--- a/ex4_congtrunhanchia/app/src/main/res/layout/activity_main.xml
+++ b/ex4_congtrunhanchia/app/src/main/res/layout/activity_main.xml
@@ -56,9 +56,10 @@
         android:id="@+id/btncong"
         android:layout_width="75dp"
         android:layout_height="45dp"
-        android:layout_marginStart="28dp"
         android:layout_marginTop="212dp"
         android:text="+"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.047"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -66,9 +67,10 @@
         android:id="@+id/btntru"
         android:layout_width="75dp"
         android:layout_height="45dp"
-        android:layout_marginStart="124dp"
         android:layout_marginTop="212dp"
         android:text="-"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.36"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
