--- a/Baitapfigma2/app/src/main/res/values/colors.xml
+++ b/Baitapfigma2/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mathisfun">#EE8B60</color>
+    <color name="bg_header">#FBDAB1</color>
 </resources>
