--- a/Baitapfigma2/app/src/main/res/layout/activity_main.xml
+++ b/Baitapfigma2/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+ <LinearLayout
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:padding="35dp"
+     android:background="@color/bg_header">
+     <TextView
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:text="Math is fun!"
+         android:textSize="55dp"
+         android:textAlignment="center"
+         android:textColor="@color/mathisfun"
+         android:textStyle="bold"
+         >
+     </TextView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+ </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
