--- a/Baitapfigma2/app/src/main/res/values/colors.xml
+++ b/Baitapfigma2/app/src/main/res/values/colors.xml
@@ -4,4 +4,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="mathisfun">#EE8B60</color>
     <color name="bg_header">#FBDAB1</color>
+    <color name="m1">#18B74B</color>
+    <color name="m2">#1BA7A6</color>
+    <color name="m3">#FFAEBC</color>
+    <color name="m4">#EDC463</color>
+    <color name="tex1">#607D8B</color>
+
 </resources>
