--- a/Baitapfigma2/app/src/main/res/layout/activity_main.xml
+++ b/Baitapfigma2/app/src/main/res/layout/activity_main.xml
@@ -6,69 +6,80 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
- <LinearLayout
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content"
-     android:padding="35dp"
-     android:background="@color/bg_header"
-     android:orientation="vertical">
 
-     <TextView
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:text="Math is fun!"
-         android:textSize="55dp"
-         android:textAlignment="center"
-         android:textColor="@color/mathisfun"
-         android:textStyle="bold"
-         >
-     </TextView>
- </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/bg_header"
+        android:orientation="vertical"
+        android:padding="35dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Math is fun!"
+            android:textAlignment="center"
+            android:textColor="@color/mathisfun"
+            android:textSize="55dp"
+            android:textStyle="bold"></TextView>
+    </LinearLayout>
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableRight="@drawable/logoheader"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="144dp"
-        >
-    </TextView>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.217"></TextView>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:padding="20dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="214dp"
-        android:orientation="vertical">
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.344">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Hello Manu"
             android:textAlignment="center"
-            android:textSize="25dp"
-            android:textColor="@color/tex1">
+            android:textColor="@color/tex1"
+            android:textSize="25dp">
 
         </TextView>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Select Language"
             android:textAlignment="center"
-            android:textSize="40dp"
             android:textColor="@color/mathisfun"
-            android:textStyle="bold">
-        </TextView>
+            android:textSize="40dp"
+            android:textStyle="bold"></TextView>
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="341dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.954">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -76,6 +87,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/btn1"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_margin="20dp"
@@ -85,11 +97,12 @@
                 android:textColor="#238023" />
 
             <Button
+                android:id="@+id/btn2"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_margin="20dp"
-                android:background="@drawable/rounded_button"
 
+                android:background="@drawable/rounded_button"
                 android:text="ಕನ್ನಡ"
                 android:textColor="#007AFF" />
         </LinearLayout>
