--- a/Baitapfigma2/app/src/main/res/layout/activity_main2.xml
+++ b/Baitapfigma2/app/src/main/res/layout/activity_main2.xml
@@ -6,113 +6,128 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+    <!-- Header -->
     <LinearLayout
+        android:id="@+id/linearLayout7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="35dp"
         android:background="@color/bg_header"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="35dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Math is fun!"
-            android:textSize="55dp"
             android:textAlignment="center"
             android:textColor="@color/mathisfun"
-            android:textStyle="bold"
-            >
-        </TextView>
+            android:textSize="55dp"
+            android:textStyle="bold"/>
     </LinearLayout>
 
+    <!-- Logo -->
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableRight="@drawable/logoheader"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="144dp"
-        >
-    </TextView>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="10dp"/>
 
+    <!-- Modes Title -->
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:padding="20dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="214dp"
-        android:orientation="vertical">
-
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Modes"
             android:textAlignment="center"
-            android:textSize="40dp"
             android:textColor="@color/mathisfun"
-            android:textStyle="bold">
-        </TextView>
-
+            android:textSize="40dp"
+            android:textStyle="bold"/>
     </LinearLayout>
 
+    <!-- Button Section -->
     <LinearLayout
+        android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="341dp">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingBottom="20dp">
 
+        <!-- Row 1 -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <Button
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_margin="20dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/rounded_button"
-                android:text="Đếm "
-                android:textSize="20dp"
-
-                android:textColor="#238023" />
-
-            <Button
+                android:id="@+id/btndem"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_margin="20dp"
                 android:background="@drawable/rounded_button"
-                android:textSize="20dp"
+                android:text="Đếm"
+                android:textColor="#238023"
+                android:textSize="20dp"/>
+
+            <Button
+                android:id="@+id/btnmatch"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_margin="20dp"
+                android:background="@drawable/rounded_button"
                 android:text="Nối hình"
-                android:textColor="#007AFF" />
+                android:textColor="#007AFF"
+                android:textSize="20dp"/>
         </LinearLayout>
 
+        <!-- Row 2 -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <Button
+                android:id="@+id/btnPattern"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_margin="20dp"
                 android:background="@drawable/rounded_button"
                 android:text="Pattern"
-                android:textSize="20dp"
-                android:textColor="#D32F2F" />
+                android:textColor="#D32F2F"
+                android:textSize="20dp"/>
 
             <Button
+                android:id="@+id/btnSetting"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_margin="20dp"
                 android:background="@drawable/rounded_button"
                 android:text="Setting"
-                android:textSize="20dp"
-                android:textColor="#FFA000" />
+                android:textColor="#FFA000"
+                android:textSize="20dp"/>
         </LinearLayout>
-
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
