--- a/Baitapfigma2/app/src/main/res/layout/activity_main2.xml
+++ b/Baitapfigma2/app/src/main/res/layout/activity_main2.xml
@@ -8,6 +8,8 @@
     tools:context=".MainActivity">
 
     <!-- Header -->
+
+    <!-- Logo -->
     <LinearLayout
         android:id="@+id/linearLayout7"
         android:layout_width="match_parent"
@@ -15,9 +17,12 @@
         android:background="@color/bg_header"
         android:orientation="vertical"
         android:padding="35dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:layout_width="match_parent"
@@ -25,31 +30,38 @@
             android:text="Math is fun!"
             android:textAlignment="center"
             android:textColor="@color/mathisfun"
-            android:textSize="55dp"
-            android:textStyle="bold"/>
+            android:textSize="45dp"
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <!-- Logo -->
+    <!-- Modes Title -->
+
+    <!-- Button Section -->
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableRight="@drawable/logoheader"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
-        app:layout_constraintStart_toStartOf="parent"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="10dp"/>
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <!-- Modes Title -->
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:layout_width="match_parent"
@@ -58,10 +70,9 @@
             android:textAlignment="center"
             android:textColor="@color/mathisfun"
             android:textSize="40dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <!-- Button Section -->
     <LinearLayout
         android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
@@ -74,11 +85,13 @@
         android:paddingBottom="20dp">
 
         <!-- Row 1 -->
+
+        <!-- Row 2 -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btndem"
@@ -88,7 +101,7 @@
                 android:background="@drawable/rounded_button"
                 android:text="Đếm"
                 android:textColor="#238023"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
 
             <Button
                 android:id="@+id/btnmatch"
@@ -98,10 +111,9 @@
                 android:background="@drawable/rounded_button"
                 android:text="Nối hình"
                 android:textColor="#007AFF"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </LinearLayout>
 
-        <!-- Row 2 -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
