--- a/thongtincanhann/app/src/main/res/drawable/edit_text_background.xml
+++ b/thongtincanhann/app/src/main/res/drawable/edit_text_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/transparent" />
-    <stroke android:width="2dp" android:color="#38363654"/>
-    <corners android:radius="5dp"/>
+    <corners android:radius="8dp" />
+    <solid android:color="#40FFFFFF" /> <!-- Semi-transparent white -->
+    <stroke android:width="1dp" android:color="#50FFFFFF" /> <!-- Subtle border -->
 </shape>
