--- a/Replace_Fragment/app/src/main/res/layout/fragment_fragmenthree.xml
+++ b/Replace_Fragment/app/src/main/res/layout/fragment_fragmenthree.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/holder"
+    android:id="@+id/frame3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BlankFragment">
+    tools:context=".Fragmenthree">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/frame1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#A04040"
+        android:background="#0BD3C0"
         android:gravity="center"
         android:text="@string/hello_blank_fragment"
         android:textSize="30dp" />
